src/tests/errors/parsing/test03.cmp
program p begin   
  proc a (x:int,)  /* not allowed, comma is a separator */
  begin 
  end
end  
